--- a/src/components/TodoTemplate.scss
+++ b/src/components/TodoTemplate.scss
@@ -1,3 +1,12 @@
+.TodoListItem-virtualized {
+    & + & {
+        border-top: 1px solid #dee2e6;
+    }
+    &:nth-child(even) {
+        background: #f8f9fa;
+    }
+}
+
 .TodoTemplate {
     width: 512px;
     margin: 6rem auto 0;
